Fix footer spacing

--- a/css/main.css
+++ b/css/main.css
@@ -290,15 +290,18 @@ nav {
 footer {
   text-align: center;
   padding: 0.25rem;
-  /*font-family: 'Geo', sans-serif;*/
   font-family: "PT Serif", serif;
 }
 
 footer li {
   display: inline;
-  padding-top: 2rem;
+  padding-top: 1rem;
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+footer li > p {
+  padding-bottom: 1em;
 }
 
 footer a:link {
